--- a/DataSimulator/DataSimulator.csproj
+++ b/DataSimulator/DataSimulator.csproj
@@ -50,8 +50,12 @@
     <Compile Include="ListViewEx.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Manifest.cs" />
+    <Compile Include="Methods.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SendDataFromFile.cs" />
+    <Compile Include="TcpClientActions.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
